--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		/>
 
 		<title>Frontend Mentor | Advice generator app</title>
+
+		<link rel="stylesheet" href="./css/style.css" />
+		<script src="./js/script.js" defer></script>
 	</head>
 	<body>
 		<main class="card">
