advice text styling

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 	<body>
 		<main class="card">
 			<h1 class="advice-heading">
-				Advice &#35;
-				<span id="advice-id">117</span>
+				Advice &#35;<span id="advice-id">117</span>
 			</h1>
 			<p class="advice-text" id="advice-text">
 				"It is easy to sit up and take notice, what's difficult is getting up
