--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
 	</head>
 	<body>
 		<main class="card">
-			<h1 class="advice-heading">
-				Advice &#35;<span id="advice-id">117</span>
-			</h1>
-			<p class="advice-text" id="advice-text">
-				"It is easy to sit up and take notice, what's difficult is getting up
-				and taking action."
-			</p>
+			<h1 class="advice-heading">Advice &#35;<span id="advice-id"></span></h1>
+			<p class="advice-text" id="advice-text"></p>
 			<img src="./images/pattern-divider-desktop.svg" alt="Card divider" />
 			<button class="btn-getquote" id="btn-getquote">
 				<img src="./images/icon-dice.svg" alt="Get new quote" />
